Fix mobile translation menu hidden behind roundtable

--- a/themes/logi/static/css/main.css
+++ b/themes/logi/static/css/main.css
@@ -3235,6 +3235,7 @@ input, select, textarea {
 		display: flex;
 		flex-direction: row;
 		align-items: center;
+		z-index: 1;
 	}
 
 		#nav input, #nav select, #nav textarea {
